--- a/src/eventbrain/contrib/js/test.html
+++ b/src/eventbrain/contrib/js/test.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <body>
 <head>
-	<title>Test</title>
+	<title>CPU Usage real-time graph</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="https://raw.github.com/dansimpson/amqp-js/master/javascripts/swfobject.js" type="text/javascript"></script>
@@ -20,7 +20,7 @@ $(document).ready(function() {
 //configure params here
 MQ.configure({
     //enable logging to the console
-//    logger: console,
+    //logger: console,
     host: "localhost",
     port: 5672,
     user: "guest",
@@ -33,19 +33,20 @@ MQ.topic("cpu");
 var data = [];
 var x_scale = 50;
 
-var initial = new Date();
-for (var i=0; i<x_scale; ++i){
-    data.push([initial, 0]);
-}
-
 //bind your auto queue to a topic exchange, with a routingKey
 MQ.queue("auto").bind("cpu", "#").callback(function(m) {
     console.log("topic message received", m.data, m.exchange, m.routingKey);
-    data.shift();
-    var currentTime = new Date();
-    var hours = currentTime.getHours()
-    var minutes = currentTime.getMinutes()
-    data.push([new Date(), parseFloat(m.data)]);
+    if (data.length == 0){
+        // first data
+        var initial = new Date();
+        for (var i=0; i<x_scale; ++i){
+            data.push([initial, parseFloat(m.data)]);
+        }
+        return;
+    } else {
+        data.shift();
+        data.push([new Date(), parseFloat(m.data)]);
+    }
     $.plot($("#graph"), [data], {
         xaxis: {
             minTickSize: [1, "minute"],
