--- a/src/eventbrain/contrib/js/test.html
+++ b/src/eventbrain/contrib/js/test.html
@@ -2,36 +2,38 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <body>
 <head>
-	<title>CPU Usage real-time graph</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-	<script src="https://raw.github.com/dansimpson/amqp-js/master/javascripts/swfobject.js" type="text/javascript"></script>
-	<script src="https://raw.github.com/dansimpson/amqp-js/master/javascripts/mq.js" type="text/javascript"></script>
-	<script src="http://people.iola.dk/olau/flot/jquery.flot.js" type="text/javascript"></script>
+    <title>CPU Usage real-time graph</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://raw.github.com/dansimpson/amqp-js/master/javascripts/swfobject.js" type="text/javascript"></script>
+    <script src="media/mq.js" type="text/javascript"></script>
+    <script src="http://people.iola.dk/olau/flot/jquery.flot.js" type="text/javascript"></script>
 </head>
 
 <body>
 
-AMPQ: <div id="AMQPProxy">Log CPU usage:<br/></div>
+Log CPU usage:: <div id="AMQPProxy">Browser doesn't support Flash<br/></div>
 <div id="graph" style="width:600px;height:300px;"></div>
+<br />
+<div id="notif" style="width:600px;height:300px;"></div>
 
 <script type="text/javascript">
 $(document).ready(function() {
 //configure params here
 MQ.configure({
     //enable logging to the console
-    //logger: console,
+    logger: console,
     host: "localhost",
     port: 5672,
-    user: "guest",
-    password: "guest",
-    vhost: "test",
+    user: "test",
+    password: "test",
+    vhost: "test"
 });
 
 //declare a direct exchange
 MQ.topic("cpu");
 var data = [];
-var x_scale = 50;
+var x_scale = 100;
 
 //bind your auto queue to a topic exchange, with a routingKey
 MQ.queue("auto").bind("cpu", "#").callback(function(m) {
@@ -39,7 +41,7 @@ MQ.queue("auto").bind("cpu", "#").callback(function(m) {
     if (data.length == 0){
         // first data
         var initial = new Date();
-        for (var i=0; i<x_scale; ++i){
+        for (var i = 0; i < x_scale; ++i){
             data.push([initial, parseFloat(m.data)]);
         }
         return;
@@ -49,10 +51,15 @@ MQ.queue("auto").bind("cpu", "#").callback(function(m) {
     }
     $.plot($("#graph"), [data], {
         xaxis: {
-            minTickSize: [1, "minute"],
+            minTickSize: [15, "second"],
             mode: "time",
-            timeformat: "%H:%M",
+            timeformat: "%H:%M:%S",
         }});
+});
+
+MQ.queue("auto").bind("notify-email", "#").callback(function(m) {
+    console.log("notify-email", m.data, m.exchange, m.routingKey);
+    $("#notif").html($("#notif").html() + "<br />" + Date() + ": received notification:" + m.data); 
 });
 
 swfobject.embedSWF(
