--- a/src/eventbrain/contrib/js/test.html
+++ b/src/eventbrain/contrib/js/test.html
@@ -6,60 +6,73 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://raw.github.com/dansimpson/amqp-js/master/javascripts/swfobject.js" type="text/javascript"></script>
-    <script src="media/mq.js" type="text/javascript"></script>
+    <script src="https://raw.github.com/dansimpson/amqp-js/master/javascripts/mq.js" type="text/javascript"></script>
     <script src="http://people.iola.dk/olau/flot/jquery.flot.js" type="text/javascript"></script>
 </head>
 
 <body>
 
-Log CPU usage:: <div id="AMQPProxy">Browser doesn't support Flash<br/></div>
+Nginx stats :: <div id="AMQPProxy">Browser doesn't support Flash<br/></div>
 <div id="graph" style="width:600px;height:300px;"></div>
 <br />
-<div id="notif" style="width:600px;height:300px;"></div>
+<div id="graph2" style="width:600px;height:300px;"></div>
 
 <script type="text/javascript">
 $(document).ready(function() {
 //configure params here
 MQ.configure({
     //enable logging to the console
-    logger: console,
+    //logger: console,
     host: "localhost",
     port: 5672,
-    user: "test",
-    password: "test",
+    user: "guest",
+    password: "guest",
     vhost: "test"
 });
 
 //declare a direct exchange
-MQ.topic("cpu");
-var data = [];
+MQ.topic("nginxstats");
+var data_conn = [], data_waiting = [], data_reading = [],
+        data_writing = [], data_connpersec = [];
+
 var x_scale = 100;
 
 //bind your auto queue to a topic exchange, with a routingKey
-MQ.queue("auto").bind("cpu", "#").callback(function(m) {
-    console.log("topic message received", m.data, m.exchange, m.routingKey);
-    if (data.length == 0){
+MQ.queue("auto").bind("nginxstats", "#").callback(function(m) {
+    //console.log("topic message received", m.data, m.exchange, m.routingKey);
+    var initial = new Date();
+    if (data_conn.length == 0){
         // first data
-        var initial = new Date();
         for (var i = 0; i < x_scale; ++i){
-            data.push([initial, parseFloat(m.data)]);
+            data_conn.push([initial, parseFloat(m.data.connections)]);
+            data_waiting.push([initial, parseFloat(m.data.waiting)]);
+            data_reading.push([initial, parseFloat(m.data.reading)]);
+            data_writing.push([initial, parseFloat(m.data.writing)]);
+            data_connpersec.push([initial, parseFloat(m.data.connpersec)]);
         }
         return;
     } else {
-        data.shift();
-        data.push([new Date(), parseFloat(m.data)]);
+        data_conn.shift();
+        data_conn.push([initial, parseFloat(m.data.connections)]);
+        data_waiting.shift();
+        data_waiting.push([initial, parseFloat(m.data.waiting)]);
+        data_reading.shift();
+        data_reading.push([initial, parseFloat(m.data.reading)]);
+        data_writing.shift();
+        data_writing.push([initial, parseFloat(m.data.writing)]);
+        data_connpersec.shift();
+        data_connpersec.push([initial, parseFloat(m.data.connpersec)]);
     }
-    $.plot($("#graph"), [data], {
+    $.plot($("#graph"), [{label: "Connections", data: data_conn},
+                        {label: "Waiting", data: data_waiting},
+                        {label: "Reading", data: data_reading},
+                        {label: "Conn/sec", data: data_connpersec},
+                        {label: "Writing", data: data_writing}], {
         xaxis: {
             minTickSize: [15, "second"],
             mode: "time",
             timeformat: "%H:%M:%S",
         }});
-});
-
-MQ.queue("auto").bind("notify-email", "#").callback(function(m) {
-    console.log("notify-email", m.data, m.exchange, m.routingKey);
-    $("#notif").html($("#notif").html() + "<br />" + Date() + ": received notification:" + m.data); 
 });
 
 swfobject.embedSWF(
